# gnome-backgrounds

./: .gitignore  AUTHORS  PKGBUILD  README.md  gnome-backgrounds.doap
backgrounds/: bloom-d.jxl  bloom-l.jxl  bloom.xml.in  line-d.jxl  line-l.jxl  line.xml.in  meson.build  ocean-d.jxl  ocean-l.jxl  ocean.xml.in  pride-d.jxl  pride-l.jxl  pride.xml.in  sky-d.jxl  sky-l.jxl  sky.xml.in  steep-d.jxl  steep-l.jxl  steep.xml.in  symbolic-soup.xml.in  wheel-d.jxl  wheel-l.jxl  wheel.xml.in  world-d.jxl  world-l.jxl  world.xml.in
backgrounds-alt/: pride.xml.in  steep.xml.in  world.xml.in
